--- a/templates/index.html
+++ b/templates/index.html
@@ -75,6 +75,8 @@
     <div id=console>
       <textarea name=console id=console style='height:420px; width:793px; background:#FFC; resize:both; min-height:200px; min-width:200px; text-align:center'>{{ console }}</textarea>
     </div>
+    <div id=map>
+    </div>
   </div>
 </center>
 </body>
