--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,13 +3,12 @@
   <head>
     <title>ITT Optimizer</title>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styling.css') }}">
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-
+    <script type=text/javascript src="{{ url_for('static', filename='jquery.js') }}"></script>
+    <script type=text/javascript src="{{ url_for('static', filename='cycling_jquery.js') }}"></script>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     {% block head %}
     {% endblock %}
   </head>
   {% block body %}
   {% endblock %}
-  <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 </html>
