--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,11 +3,11 @@
   <head>
     <title>ITT Optimizer</title>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styling.css') }}">
-    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Inconsolata'>
+    <link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Inconsolata'>
     <link rel='stylesheet' type='text/css' href='//cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.min.css'>
-    <script type=text/javascript src="{{ url_for('static', filename='jquery.js') }}"></script>
-    <script type=text/javascript src="{{ url_for('static', filename='cycling_jquery.js') }}"></script>
-    <script type=text/javascript src="//cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
+    <script src="{{ url_for('static', filename='cycling_jquery.js') }}"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.min.js"></script>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     {% block head %}
     {% endblock %}
