--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,7 @@
     <link rel='stylesheet' type='text/css' href='//cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.min.css'>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
     <script src="{{ url_for('static', filename='cycling_jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='mixpanel.js') }}"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.min.js"></script>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     {% block head %}
